syntax = "proto3";

package repo.v1;

option go_package = "github.com/tkeel-io/tkeel/api/repo/v1;v1";
option java_multiple_files = true;
option java_package = "dev.tkeel.rudder.api.repo.v1";
option java_outer_classname = "OpenapiProtoV1";

// @plugins=protoc-gen-go-errors
// 错误
enum Error {
  // 未知类型
  // @code=UNKNOWN
  ERR_UNKNOWN = 0;
  // 找不到 REPO
  // @code=NOT_FOUND
  ERR_REPO_NOT_FOUND = 1;
  // 获取 REPO 列表数据出错
  // @code=INTERNAL
  ERR_LIST_PLUGIN = 2;
  // 请求参数无效
  // @code=INVALID_ARGUMENT
  ERR_INVALID_ARGUMENT = 3;
  // 请求后端存储错误
  // @code=INTERNAL
  ERR_INTERNAL_STORE = 4;
  // 内部错误
  // @code=INTERNAL
  ERR_INTERNAL_ERROR = 5;
}